--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,6 +7,7 @@ server {
     access_log  /var/log/nginx/host.access.log  main;
     error_log  /var/log/nginx/host.error.log  debug;
 
+    ssl    on;
     ssl_certificate /etc/ssl/certificates/server.crt; ##${SSL_CERT}
     ssl_certificate_key /etc/ssl/certificates/server.key; ##${SSL_PRIVATE_KEY}
 
