ssl listening fixed for IPv4

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen       443; ## ${LISTEN_PORT};
+    listen       443 ssl; ## ${LISTEN_PORT};
     listen  [::]:443 ssl; ## ${LISTEN_PORT} ${LISTEN_PROTOCOL};
     server_name  localhost;
 
@@ -7,7 +7,6 @@ server {
     access_log  /var/log/nginx/host.access.log  main;
     error_log  /var/log/nginx/host.error.log  debug;
 
-    ssl    on;
     ssl_certificate /etc/ssl/certificates/server.crt; ##${SSL_CERT}
     ssl_certificate_key /etc/ssl/certificates/server.key; ##${SSL_PRIVATE_KEY}
 
