nginx dynamic configuration based on .env file.

--- a/.env
+++ b/.env
@@ -8,7 +8,8 @@ DOCKERFILE=release.Dockerfile
 PLUGIN_VERSION=1.19.0
 
 # NGINX Variables
-LISTEN_PORT=443
-LISTEN_PROTOCOL="" ## set to ssl in case of HTTPS
-SSL_CERT="" ## set to ssl_certificate /etc/ssl/certificates/server.crt;
-SSL_PRIVATE_KEY="" ## set to ssl_certificate_key /etc/ssl/certificates/server.key;
+LISTEN_PORT_HTTP=80 ## Port on host
+LISTEN_PORT_HTTPS=443 ## Port on host
+LISTEN_PROTOCOL="http" ## Possible values "http", "https" or "both"
+SSL_CERT="./nginx_data/ssl/certificate.crt" ## Certificate path on host
+SSL_PRIVATE_KEY="./nginx_data/ssl/private.key" ## Private key path on host
