--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,14 @@
 server {
-    listen       443 ssl; ## ${LISTEN_PORT};
-    listen  [::]:443 ssl; ## ${LISTEN_PORT} ${LISTEN_PROTOCOL};
+    ----LISTEN_PROTOCOL_CONF---- #listen       80;
     server_name  localhost;
 
     absolute_redirect off; # To prevent internal redirect causing invalid URL(s), when e.g. port of process and exposed port on host is different (in case of docker), and reverse proxy cases
     access_log  /var/log/nginx/host.access.log  main;
     error_log  /var/log/nginx/host.error.log  debug;
 
-    ssl_certificate /etc/ssl/certificates/server.crt; ##${SSL_CERT}
-    ssl_certificate_key /etc/ssl/certificates/server.key; ##${SSL_PRIVATE_KEY}
+    ----SSL_CERT_CONF----
+    #ssl_certificate /etc/ssl/certificates/server.crt; ##${SSL_CERT}
+    #ssl_certificate_key /etc/ssl/certificates/server.key; ##${SSL_PRIVATE_KEY}
 
 
     location / {
